--- a/index.html
+++ b/index.html
@@ -443,8 +443,8 @@
                     <li><a href="#features">Features</a></li>
                     <li><a href="#how-it-works">How It Works</a></li>
                     <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="pages/auth/login.html" class="btn btn-secondary">Login</a></li>
-                    <li><a href="pages/auth/register.html" class="btn btn-primary">Get Started</a></li>
+                    <li><a href="pages/login.html" class="btn btn-secondary">Login</a></li>
+                    <li><a href="pages/register.html" class="btn btn-primary">Get Started</a></li>
                 </ul>
             </nav>
         </div>
@@ -456,8 +456,8 @@
             <div class="hero-content">
                 <h1>Transform Your Online Presence with AI-Powered Avatars</h1>
                 <p>Create personalized AI avatars that engage with your audience and drive affiliate sales while you focus on creating amazing content.</p>
-                <a href="pages/auth/register.html" class="btn btn-primary">Create Your Avatar</a>
-                <a href="pages/fan/chat.html?demo=true" class="btn btn-secondary">Try Demo</a>
+                <a href="pages/register.html" class="btn btn-primary">Create Your Avatar</a>
+                <a href="pages/chat.html?demo=true" class="btn btn-secondary">Try Demo</a>
             </div>
             <div class="hero-img">
                 <img src="assets/images/hero-image.jpg" alt="AI Avatar Example">
@@ -557,7 +557,7 @@
             <h2>Ready to Transform Your Online Presence?</h2>
             <p>Join thousands of influencers who are using AvatarCommerce to engage with their audience and increase their affiliate revenue.</p>
             <div class="cta-buttons">
-                <a href="pages/auth/register.html" class="btn btn-primary">Get Started</a>
+                <a href="pages/register.html" class="btn btn-primary">Get Started</a>
                 <a href="#pricing" class="btn btn-secondary">View Pricing</a>
             </div>
         </div>
@@ -577,8 +577,8 @@
                         <li><a href="#features">Features</a></li>
                         <li><a href="#how-it-works">How It Works</a></li>
                         <li><a href="#pricing">Pricing</a></li>
-                        <li><a href="pages/auth/login.html">Login</a></li>
-                        <li><a href="pages/auth/register.html">Sign Up</a></li>
+                        <li><a href="pages/login.html">Login</a></li>
+                        <li><a href="pages/register.html">Sign Up</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
