--- a/pages/analytics.html
+++ b/pages/analytics.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Analytics - AvatarCommerce</title>
+    <title>Analytics - Avatar Commerce</title>
     <style>
         /* Reset and base styles */
         * {
@@ -780,9 +780,9 @@
     </main>
 
     <!-- Load shared scripts -->
-    <script src="../../js/config.js"></script>
-    <script src="../../js/utils.js"></script>
-    <script src="../../js/api-client.js"></script>
+    <script src="../js/config.js"></script>
+    <script src="../js/utils.js"></script>
+    <script src="../js/api-client.js"></script>
     
     <script>
         document.addEventListener('DOMContentLoaded', function() {
